# binary-protocol-analyzer

./: CMakeLists.txt  README.md
src/: hexdump.cpp  hexdump.h  main.cpp  packet_analyzer.cpp  packet_analyzer.h  protocol_parser.cpp  protocol_parser.h
tests/: test_parser.cpp
